<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PIECE_DEV</string>

    <!-- 숫자 3자릿수 콤마 -->
    <string name="string_format">%,2d 원</string>


    <string name="error_internet_not_available">Internet is not available</string>
    <string name="error_server_not_available">Server is not available</string>
    <string name="error_server">Server error</string>
    <string name="error_unexpected">Unexpected error</string>

    <!-- firebase -->
    <string name="default_notification_channel_id">96071973609</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>

    <!-- playstore url -->
    <string name="playstore_url">market://details?id=run.piece.dev</string>

    <!-- dialog -->
    <string name="confirm">확인</string>
    <string name="cancle">취소</string>
    <string name="d_title">PIECE 앱을 최신버전으로 업데이트해 주세요.</string>
    <string name="d_content">[확인]버튼을 누르시면 설치 화면으로 이동 합니다.</string>

    <!-- dialog password -->
    <string name="d_p_title">비밀번호가 틀렸어요</string>
    <string name="d_p_content">비밀번호를 잊으셨나요?</string>
    <string name="re_password">재설정</string>
    <string name="dismiss">닫기</string>

    <!-- dialog Address -->
    <string name="add_title">주소 등록 완료</string>
    <string name="add_sub_title">주소가 성공적으로 등록되었어요.</string>

    <!-- dialog Coupon -->
    <string name="coupon_title">쿠폰을 바로 사용할까요?</string>
    <string name="coupon_subTitle">등록 완료된 쿠폰은 취소할 수 없어요.</string>
    <string name="coupon_dismiss">닫기</string>
    <string name="coupon_confirm">사용하기</string>

    <!-- intro -->
    <string name="i_beta_text"><u>서비스 둘러보기</u></string>

    <!-- join -->
    <string name="j_top_title">본인 확인</string>
    <string name="j_sub_title">피스를 더 안전하게 이용하기 위한 절차에요.</string>
    <string name="j_name_title">이름</string>
    <string name="j_name_hint">이름 입력</string>
    <string name="j_birth_title">생년월일</string>
    <string name="j_birth_hint">ex) 19990617</string>
    <string name="j_gender_title">성별</string>
    <string name="j_gender_man">남자</string>
    <string name="j_gender_woman">여자</string>
    <string name="j_phone_title">통신사</string>
    <string name="j_phone_hint">통신사 선택</string>
    <string name="j_user_phone_title">휴대폰 번호</string>
    <string name="j_user_phone_hint">하이픈(-) 없이 입력</string>
    <string name="agency_01">SKT</string>
    <string name="agency_02">KT</string>
    <string name="agency_03">LG U+</string>
    <string name="agency_04">SKT 알뜰폰</string>
    <string name="agency_05">KT 알뜰폰</string>
    <string name="agency_06">LG U+ 알뜰폰</string>
    <string name="confirm_btn_title">확인</string>
    <string name="confirm_btn_next_title">다음</string>

    <!-- consentModel(약관) -->
    <string name="c_top_title">약관 동의</string>
    <string name="c_all_agree">약관에 모두 동의합니다</string>
    <string name="c_agree1">서비스 이용약관</string>
    <string name="c_agree2">개인정보 처리방침</string>
    <string name="c_agree3">본인확인서비스 이용 약관</string>
    <string name="c_agree4">개인정보 수집/이용/취급 위탁 동의 약관</string>
    <string name="c_agree5">고유식별정보처리 약관</string>
    <string name="c_agree6">통신사 이용 약관</string>
    <string name="c_agree7">개인정보 제3자 제공 동의 약관</string>
    <string name="c_agree8">마케팅 활용 및 광고 수신 동의</string>
    <string name="c_common">[필수]</string>
    <string name="c_select">[선택]</string>

    <!-- 인증번호 입력 dialog -->
    <string name="sms_title">인증번호 입력</string>
    <string name="sms_hint">전송된 인증번호 입력</string>
    <string name="sms_retry">재전송</string>
    <string name="sms_confirm">확인</string>

    <!-- 간편 비밀번호 -->
    <string name="passcode_title">간편 비밀번호</string>
    <string name="passcode_title_c">숫자 6자리를 입력해 주세요</string>
    <string name="passcode_title_re">한번 더 입력해주세요.</string>
    <string name="passcode_title_verify">비밀번호가 일치하지 않아요.</string>
    <string name="passcode_clear">초기화</string>

    <!-- 메인 팝업 -->
    <string name="p_today_close">오늘은 보지 않기</string>


    <!-- 포트폴리오 상세 하단 유의사항 -->
    <string name="portfolio_detail_notice_text">
        • 구매원금과 수익을 보장하지 않으며, 손실에 대한 책임은 모두 구매자에게 있습니다.\n
        • 조각구매 대상이 되는 상품과 그 상품을 등록하는 개별 판매자에 대한 충분한 검수와 검증에 대한 책임은 당사에 있습니다.\n
        • 전자상거래 등에서의 소비자보호에 관한 법률(전자상거래법)에 따라 계약을 체결한 소비자는 구매 후 7일 이내 청약을 철회할 수 있습니다.\n
    </string>


    <!-- 내정보 상세 -->
    <string name="re_auth"><u>재인증</u></string>
    <string name="address_change"><u>주소 변경</u></string>
    <string name="email_change"><u>이메일 변경</u></string>


    <!-- 쿠폰함 -->
    <string name="notice_text"><u>사용시 유의사항</u></string>
    <string name="notice">
        • 쿠폰의 유효 기간이 지나면 사용할 수 없어요.\n
        • 쿠폰은 한 번만 사용할 수 있어요. \n
        • 한 번 사용된 쿠폰은 구매 취소나 환불 시에 재발행되지 않아요. \n
        • 조각교환 쿠폰은 사용 후 취소할 수 없어요. \n
        • 특정 쿠폰은 다른 쿠폰과 함께 중복 사용할 수 없어요. \n
        • 쿠폰을 다른 사람에게 양도할 수 없어요. \n
        • 쿠폰을 현금으로 바꿀 수 없어요. \n
    </string>


    <!-- 회원 탈퇴 Detail -->
    <string name="title">예치금이나 소유 조각이 남아 있는 경우 회원 탈퇴를 처리할 수 없어요. \n 고객센터(<u>help@buysellstandards.com</u>)에 알려 주세요.</string>


    <!-- 가상계좌 충전 신청 완료 -->
    <string name="copy_title"><u>복사하기</u></string>

    <!-- 계좌 변경 문구 -->
    <string name="account_change_title"><u>변경</u></string>


    <!-- 소유증서 문구 -->
    <string name="deed_title_1">자산 구매 및 업무 위탁 계약서 \n(소유권 지분 확인 증서)</string>
    <string name="deed_title_2"><b>%1$s</b> (이하 “갑", 생년월일 %2$s) 과 (주)바이셀스탠다드 (이하 “을", 법인등록번호 110111 – 7035606)는 다음과 같이 특정 자산에 대한 소유권 지분 매매 및 업무 위탁 계약을 체결한다.</string>
    <string name="deed_title_3">본 계약은 갑이 을로부터 특정 자산의 분할 소유권을 구매함에 있어 첫째, 갑이 특정 자산(이하 "자산")의 분할 소유권을 취득하게 되고, 둘째, 을이 갑이 취득한 분할 소유권에 대한 업무 위탁 계약에 따른 권리 관계 및 자산 매각에 따른 이익/손실 분배 등에 대한 사항을 규정하기 위하여 작성한다.</string>
    <string name="deed_title_4">① 갑은 본 계약에 대한 당사자로서 구매 대금 지급에 따라 갑이 자산에 대한 분할소유권을 취득하게 된다. 갑이 미성년자인 경우에는 법정대리인의 묵시적 처분허락이 있는 것으로 본다. \n
                  ② 을은 본 계약의 대상이 되는 자산에 대하여 완전한 소유권을 취득하고 이에 대한 정당한 매매 권한이 있음을 보증한다. 만약 을이 자산에 대한 처분 권한이 없거나 자산이 위조품인 경우에는 본 계약은 해제되고 을은 갑이 지급한 금액의 2배의 금액을 손해배상(구매 대금 반환을 포함)하기로 한다.</string>
    <string name="deed_title_5">① 본 계약을 통하여 갑이 취득하는 자산에 대한 분할 소유권은 다음과 같다.</string>
    <string name="deed_title_5_1">② 갑은 구매하려는 대상의 분할 소유권 구매와 동시에 예치금을 통하여 을에게 구매 대금을 지급해야 한다. 자산에 따라 부가가치세가 발생하는 경우에는 갑은 구매 대금과 별도로 부가가치세를 추가로 납부해야 한다.</string>
    <string name="deed_title_6">본 계약의 효력이 발생하는 시점부터 갑은 을이 점유하는 자산에 대한 분할 소유권을 적법하게 취득하며, 을은 본 계약 내용에 따라 갑으로부터 위임 받은 자산의 관리, 처분에 대한 사무를 처리해야 한다.</string>
    <string name="deed_title_7">① 갑은 자산에 대하여 취득한 분할 소유권을 제3자에게 임의로 양도하거나 담보로 제공할 수 없으며, 분할 소유권 구매에 따른 분할소유관계는 자산 매각에 따른 이익/손실 분배 정산 완료와 동시에 해소된다. 단, 을이 제공하는 분할 소유권 매매 시스템 (PIECE Trade System)을 통해 거래되는 경우에 한하여 분할 소유권의 일부 양도가 인정된다.\n
                  ② 법률 규정에 따라 제3자가 갑의 지분을 취득하게 되는 경우에도 분할 소유권에 대한 내용과 위임 등 본 계약 사항은 제3자에게 그대로 적용된다.</string>
    <string name="deed_title_8">
                ① 갑은 자산에 대한 관리 권한(자산의 사용, 보관, 관리, 홍보) 일체를 을에게 위임한다. 을은 \'\갑\'\의 이익을 위하여 별도의 관리 계약을 체결한 전문판매위탁사 또는 보관 업체 등에 해당 권한의 일부를 위임할 수 있다.\n
                ② 을이 자산의 임대, 전시, 저작권 등을 통하여 별도의 이익을 얻게 될 경우에는, 갑에게 사전에 통지한 후 이익금을 분배할 수 있다.\n
                ③ 을은 갑이 구매한 자산에 대한 관리 현황을 모바일앱의 \'\나의소유내역\'\에서 확인할 수 있도록 지속적으로 업데이트한다.\n
                ④ 을의 귀책으로 자산이 분실, 멸실, 훼손되는 경우에는 을은 이에 대한 손해배상을 부담한다. 다만, 을이 부담하는 손해배상액은 구매금액의 110%를 한도로 한다.</string>
    <string name="deed_title_9">① 분할소유관계 해소를 위한 자산 처분 권한 위임에 따라 을은 기본 회수 기간 이내에 자산 매각을 결정하고 매각 제반 업무를 수행해야 한다. 단, 을은 자산 매각과 관련하여 예상 처분 가격 이상이 되도록 최대한 노력해야 한다. (자산이 포트폴리오로 구성되어 있을 경우에는 포트폴리오 전체 가격을 기준으로 판단한다.)\n
                  ② 기본 회수 기간 내에 예상 처분 가격 이상으로 자산 매각 진행이 어려울 경우에는 을은 1회에 한하여 회수 기간을 연장하여 자산 매각 처분 시기를 연장할 수 있다. 단, 분할소유권 구매자의 51% 이상 반대할 경우에는 갑은 기본 회수 기간 내에 적정한 가격으로 처분해야 한다.</string>
    <string name="deed_title_10">① 정산 권한(자산 매각에 따른 분할 소유권 구매자에 대한 정산) 위임에 따라 을은 자산을 실제 매각한 금액과 분할소유권구매자로부터 모집한 금액(부가가치세 등 세금 제외)의 차액인 총이익금에서 을에 대한 수수료 20%를 공제한 나머지 매각 대금을 분할소유권구매자에게 구매 수량에 따라 분배하여 지급한다.\n
                  ② 을은 갑에게 분배하는 수익에서 기타 소득 등 관련 세금이 발생될 경우 해당 세금에 대한 증빙과 함께 납부 세금을 원천징수한 이후 수익을 지급한다.</string>
    <string name="deed_title_11">① 갑은 자산의 지분을 구매하기 위해 예치금을 선충전해야 하며, ㈜바이셀스탠다드 계좌 입금 후 1영업일 이내로 충전이 완료된다.\n
                  ② 갑을 예치금 출금을 위한 출금 신청을 해야 하며, 신청일 기준 1영업일 후 갑의 등록 계좌로 입금된다.</string>
    <string name="deed_title_12">① 분할 소유권 구매 모집이 완료되는 시점에 자산에 대한 분할 소유권 구매가 확정된다. 단, 구매 기간 종료 시점에 판매된 분할 소유권의 수량이 [80%] 미만일 경우에는 본 계약은 효력이 없으며, 구매 대금은 3영업일 이내에 갑의 계정에 예치금 형태로 환불된다.\n
                  ② 갑은 구매가 확정된 날로부터 7일 이내에 을에 대한 통지를 통하여 구매 취소 및 환불을 요청할 수 있다.</string>
    <string name="deed_title_13">  ① 본 계약은 갑이 자산에 대한 분할 소유권 구매에 대한 신청을 한 날을 계약 체결 일자로 하여 본 계약을 체결된다.\n
                  ② 본 계약서는 전자문서의 형태로 제공되며, 갑은 을에게 계약서 사본을 요청할 수 있으며 이에 대하여 을은 우편으로 계약서 사본을 송부해야 한다.</string>


    <string name="auth_notice"><u>개인정보처리방침</u></string>
</resources>