<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    style="@style/AppBottomSheetDialogTheme"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/j_phone_hint"
        android:textColor="@color/c_4a4d55"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/top_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_title"
        android:layout_marginEnd="20dp"
        android:background="@drawable/x_icon" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/skt_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:lineHeight="25px"
        android:text="@string/agency_01"
        android:textSize="16sp"
        android:textColor="@color/c_b8bcc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/kt_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:lineHeight="25px"
        android:text="@string/agency_02"
        android:textSize="16sp"
        android:textColor="@color/c_b8bcc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skt_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:lineHeight="25px"
        android:text="@string/agency_03"
        android:textSize="16sp"
        android:textColor="@color/c_b8bcc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kt_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/skt_sub_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:lineHeight="25px"
        android:text="@string/agency_04"
        android:textSize="16sp"
        android:textColor="@color/c_b8bcc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lg_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/kt_sub_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:lineHeight="25px"
        android:text="@string/agency_05"
        android:textSize="16sp"
        android:textColor="@color/c_b8bcc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skt_sub_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lg_sub_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:lineHeight="25px"
        android:text="@string/agency_06"
        android:textSize="16sp"
        android:textColor="@color/c_b8bcc8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kt_sub_tv"
        app:layout_goneMarginStart="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>