<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="phone"
            type="com.bsstandard.piece.view.join.dialog.BottomSheetDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/j_dialog_back_round"
        android:paddingBottom="50dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <!--    style="@style/AppModalStyle"-->

        <TextView
            android:id="@+id/top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/j_phone_hint"
            android:textColor="@color/c_4a4d55"
            android:textSize="20dp"
            android:textStyle="bold"
            app:fontFamily="@font/pretendard_extrabold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/x_icon"
            app:layout_constraintBottom_toBottomOf="@+id/top_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_title" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skt_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:lineHeight="25px"
            android:text="@string/agency_01"
            android:textColor="@color/c_b8bcc8"
            android:textSize="16sp"
            app:fontFamily="@font/pretendard_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kt_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:lineHeight="25px"
            android:text="@string/agency_02"
            android:textColor="@color/c_b8bcc8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skt_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lg_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:lineHeight="25px"
            android:text="@string/agency_03"
            android:textColor="@color/c_b8bcc8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kt_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skt_sub_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:lineHeight="25px"
            android:text="@string/agency_04"
            android:textColor="@color/c_b8bcc8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kt_sub_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:lineHeight="25px"
            android:text="@string/agency_05"
            android:textColor="@color/c_b8bcc8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skt_sub_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lg_sub_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:lineHeight="25px"
            android:text="@string/agency_06"
            android:textColor="@color/c_b8bcc8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kt_sub_tv"
            app:layout_goneMarginStart="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>