<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="jv"
            type="com.bsstandard.piece.view.join.JoinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/arrow_left"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/j_top_title"
                    android:textColor="@color/c_4a4d55"
                    android:textSize="25dp"
                    app:fontFamily="@font/pretendard_extrabold"
                    app:layout_constraintLeft_toLeftOf="@+id/back_img"
                    app:layout_constraintTop_toBottomOf="@+id/back_img" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bottom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineHeight="16dp"
                    android:text="@string/j_sub_title"
                    android:textColor="@color/c_8c919f"
                    android:textSize="12dp"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/top_title" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:lineHeight="20dp"
                    android:text="@string/j_name_title"
                    android:textColor="@color/c_b8bcc8"
                    android:textSize="14dp"
                    app:fontFamily="@font/pretendard_bold"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/bottom_title" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:focusable="true"
                    android:gravity="left|center"
                    android:hint="@string/j_name_hint"
                    android:inputType="text"
                    android:lineHeight="20dp"
                    android:maxLines="1"
                    android:textColor="@color/c_4a4d55"
                    android:textSize="16dp"
                    android:text="@={jv.userName}"
                    android:theme="@style/Piece_EditText"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintTop_toBottomOf="@+id/title_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:lineHeight="20dp"
                    android:text="@string/j_birth_title"
                    android:textColor="@color/c_b8bcc8"
                    android:textSize="14dp"
                    app:fontFamily="@font/pretendard_bold"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/user_name" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_birth"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="left|center"
                    android:hint="@string/j_birth_hint"
                    android:inputType="number"
                    android:lineHeight="23dp"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/c_4a4d55"
                    android:text="@={jv.userBirth}"
                    android:textSize="16dp"
                    android:theme="@style/Piece_EditText"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/title_birth" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/birth_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:lineHeight="20dp"
                    android:text="유효하지 않은 생년월일이에요."
                    android:textColor="@color/c_FF7878"
                    android:textSize="12dp"
                    android:visibility="gone"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/user_birth" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gender_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:lineHeight="20dp"
                    android:text="@string/j_gender_title"
                    android:textColor="@color/c_b8bcc8"
                    android:textSize="14dp"
                    app:fontFamily="@font/pretendard_bold"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/user_birth" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/gender_layout"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="2"
                    android:background="@drawable/j_selector_back"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/gender_title">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/man_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/j_selector"
                        android:gravity="center"
                        android:lineHeight="25dp"
                        android:text="@string/j_gender_man"
                        android:textColor="@drawable/j_selector_text_b8bcc8"
                        android:textSize="16dp"
                        app:fontFamily="@font/pretendard_bold"
                        app:layout_constraintBottom_toBottomOf="@+id/gender_layout"
                        app:layout_constraintLeft_toLeftOf="@+id/gender_layout"
                        app:layout_constraintTop_toTopOf="@+id/gender_layout" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/woman_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/j_selector"
                        android:gravity="center"
                        android:lineHeight="25dp"
                        android:stateListAnimator="@null"
                        android:text="@string/j_gender_woman"
                        android:textColor="@drawable/j_selector_text_b8bcc8"
                        android:textSize="16dp"
                        app:fontFamily="@font/pretendard_bold"
                        app:layout_constraintBottom_toBottomOf="@+id/gender_layout"
                        app:layout_constraintTop_toTopOf="@+id/gender_layout" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:lineHeight="20dp"
                    android:text="@string/j_phone_title"
                    android:textColor="@color/c_b8bcc8"
                    android:textSize="14dp"
                    app:fontFamily="@font/pretendard_bold"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/gender_layout" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_select"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/textview_underline"
                    android:gravity="left|center"
                    android:hint="@string/j_phone_hint"
                    android:lineHeight="23dp"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/c_4a4d55"
                    android:textSize="16dp"
                    android:theme="@style/Piece_EditText"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/phone_title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/arrow_down"
                    app:layout_constraintTop_toTopOf="@+id/phone_select"
                    app:layout_constraintBottom_toBottomOf="@+id/phone_select"
                    app:layout_constraintRight_toRightOf="@id/phone_select"
                    android:layout_marginEnd="16dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_num_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:lineHeight="20dp"
                    android:text="@string/j_user_phone_title"
                    android:textColor="@color/c_b8bcc8"
                    android:textSize="14dp"
                    app:fontFamily="@font/pretendard_bold"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/phone_select" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="left|center"
                    android:hint="@string/j_user_phone_hint"
                    android:inputType="number"
                    android:lineHeight="23dp"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/c_4a4d55"
                    android:text="@={jv.userPhoneNumber}"
                    android:textSize="16dp"
                    android:theme="@style/Piece_EditText"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/phone_num_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_num_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:lineHeight="20dp"
                    android:text="유효하지 않은 휴대폰 번호에요."
                    android:textColor="@color/c_FF7878"
                    android:textSize="12dp"
                    android:visibility="gone"
                    app:fontFamily="@font/pretendard_regular"
                    app:layout_constraintLeft_toLeftOf="@+id/top_title"
                    app:layout_constraintTop_toBottomOf="@+id/phone_num" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/confirm_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/j_selector"
                    android:gravity="center"
                    android:lineHeight="25dp"
                    android:text="확인"
                    android:textColor="@drawable/j_selector_text_color"
                    android:textSize="14dp"
                    app:fontFamily="@font/pretendard_bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_num" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
